bug: fix auto hide scrollbar
- fix auto hide scrollbar irregular behavior above <hN> tags
- apply js script to entire website (apply in `post.html` -> `default.html`, fix for wiki pages)

--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -51,6 +51,7 @@ h6 {
   color: $default-shade;
   font-family: $sans-serif;
   line-height: normal;
+  margin-top: 0;
   @media (prefers-color-scheme: dark) {
     color: $dark-default-shade;
   }
